[gd_scene load_steps=5 format=3 uid="uid://bj837d30n5gep"]

[ext_resource type="Texture2D" uid="uid://bi6daoyk5djpr" path="res://assets/cut_scenes/cutscene_background.png" id="1_p5208"]
[ext_resource type="Script" path="res://levels/cut_scenes/page.gd" id="1_y80vr"]
[ext_resource type="Texture2D" uid="uid://bqffpkliyf6km" path="res://assets/cut_scenes/skip_frame.png" id="3_i6k4x"]
[ext_resource type="AudioStream" uid="uid://dx2xvb03ymrw0" path="res://assets/audio/paper_turn.wav" id="4_rj2sd"]

[node name="Page" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 0
script = ExtResource("1_y80vr")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_p5208")

[node name="SkipFrame" type="TextureRect" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -324.5
offset_top = -356.0
offset_right = 324.5
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_i6k4x")

[node name="ProgressBar" type="ProgressBar" parent="Background/SkipFrame"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="SkipTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CanAdvanceTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Frames" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rj2sd")
volume_db = 20.0

[connection signal="timeout" from="SkipTimer" to="." method="_on_skip_timer_timeout"]
[connection signal="timeout" from="CanAdvanceTimer" to="." method="_on_can_advance_timer_timeout"]
